<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    Note the change to snake_case for IDs. This is a more idiomatic approach -->
<!--    snake_case is still preferred for ID names. :) -->
    <!--    Note also the extracted string resource in the first Button - this should be done for all views-->
    <!--    The width and height choices look fairly arbitrary - this is going to bite you if you try to load this app on a small screen. Better to no define them unless necessary, and rarely should you define width and height large enough to cause problems on smaller screens - such as with the main tap button. -->

    <TextView
        android:id="@+id/tap_power_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tap_power"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tapCounter" />

    <TextView
        android:id="@+id/idlePowerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/idle_power"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tapCounter" />

    <Button
        android:id="@+id/tapButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tap_button"
        android:textSize="32sp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintBottom_toTopOf="@id/storeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tap_power_text" />

    <TextView
        android:id="@+id/tapCounter"
        android:layout_width="171dp"
        android:layout_height="46dp"
        android:text="@string/tap_count"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/storeButton"
        android:layout_width="230dp"
        android:layout_height="61dp"
        android:text="@string/store_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>